src/objects/Sales_Area__c.object
<CustomObject>
    <fields>
        <fullName>ABD__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Area Business Director</description>
        <label>ABD</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Sales_Areas_ABD</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ADM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Area Development Manager</description>
        <label>ADM</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Sales_Areas_ADM</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ADO__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Area Director of Operations</description>
        <label>ADO</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Sales_Areas_ADO</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Area_VP__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Area VP</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Sales_Areas</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Sales Area</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Sales Area Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Areas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>